# fungl

./: LICENSE  README.md  fungl.cabal  stack.yaml
app/: Main.hs
app/draw-index-example/: DrawTriangleIndex.hs
src/Graphics/: FunGL.hs
src/Graphics/FunGL/: ArrayObject.hs  Attributes.hs  BufferObject.hs  Linear.hs  Render.hs  ShaderProgram.hs  Uniforms.hs
