name:                fungl
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/FunPixCode/fungl#readme
license:             BSD3
license-file:        LICENSE
author:              Valerii Lysenko
maintainer:          FunPixCode@gmail.com
copyright:           2017 Valerii Lysenko
category:            OpenGL, Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.FunGL
                     , Graphics.FunGL.ArrayObject
                     , Graphics.FunGL.BufferObject
                     , Graphics.FunGL.ShaderProgram
                     , Graphics.FunGL.Render
                     , Graphics.FunGL.Linear
  build-depends:       base >= 4.7 && < 5
                     , OpenGLRaw
                     , linear
  default-language:    Haskell2010

executable fungl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  build-depends:       base
                     , fungl
                     , GLFW-b
                     , Vec
                     , OpenGLRaw
                     , linear
  default-language:    Haskell2010

test-suite fungl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fungl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/FunPixCode/fungl
